@@ -450,9 +450,9 @@ query_info_parse(struct query_info* m, ldns_buffer* query)
 	/* minimum size: header + \0 + qtype + qclass */
 	if(ldns_buffer_limit(query) < LDNS_HEADER_SIZE + 5)
 		return 0;
-	log_assert(LDNS_OPCODE_WIRE(q) == LDNS_PACKET_QUERY);
-	log_assert(LDNS_QDCOUNT(q) == 1);
-	log_assert(ldns_buffer_position(query) == 0);
+	if(LDNS_OPCODE_WIRE(q) != LDNS_PACKET_QUERY || 
+		LDNS_QDCOUNT(q) != 1 || ldns_buffer_position(query) != 0)
+		return 0;
 	ldns_buffer_skip(query, LDNS_HEADER_SIZE);
 	m->qname = ldns_buffer_current(query);
 	if((m->qname_len = query_dname_len(query)) == 0)
